--- a/atividade_caixa_ui/src/styles3.css
+++ b/atividade_caixa_ui/src/styles3.css
@@ -10,7 +10,7 @@ body {
 
 
 html,
-.container-animation {
+body {
   min-height: 100vh;
   padding: 0;
   margin: 0;
@@ -20,8 +20,8 @@ html,
   box-sizing: border-box;
 }
 
-.container-animation {
-  background: linear-gradient(250deg, #272727, #dbd9db);
+body {
+  background: linear-gradient(250deg, #dbd8e0, #f1f0f1);
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
