Adicionado listagem em react-animation

--- a/react-animation/react-animation/src/index.css
+++ b/react-animation/react-animation/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -15,4 +15,4 @@ body {
   height: 150px;
   background: white;
   border-radius: 30px;
-}
+} */
