--- a/react-animation/react-animation/src/styles2.css
+++ b/react-animation/react-animation/src/styles2.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     overflow: hidden;
     padding: 0;
     margin: 0;
@@ -44,4 +44,4 @@ body {
     align-items: center;
     cursor: pointer;
   }
-  
+   */
